--- a/MNIST_Classification.ipynb
+++ b/MNIST_Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1455kC6sog3SrB0HGgw1J",
+      "authorship_tag": "ABX9TyN8Jp1z6GZ/ZhyH4Mf3N4jS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -234,7 +234,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**층(layer**)\n",
+        "층(layer**)\n",
         "* 데이터를 위한 필터\n",
         "* 주어진 문제에 더 의미 있는 표현을 입력된 데이터로부터 추출\n",
         "\n"
