--- a/MNIST_Classification.ipynb
+++ b/MNIST_Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrNGjMSEj62QFty6cc9hUh",
+      "authorship_tag": "ABX9TyN0fqgBPWpQkQadDGAF2P1Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 136,
       "metadata": {
         "id": "Dwhc4KSODotL"
       },
@@ -48,9 +48,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**training data**"
+      ],
+      "metadata": {
+        "id": "34Nthk2Ioa16"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# training data\n",
+        "# train_images의 차원\n",
         "train_images.shape"
       ],
       "metadata": {
@@ -58,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AhEP7sIQD9nr",
-        "outputId": "48d4a329-66bd-4ae0-a96d-2534a41b8539"
+        "outputId": "933fc53a-3a17-4ede-bc5f-788de51c0404"
       },
-      "execution_count": 121,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -70,13 +79,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 121
+          "execution_count": 137
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# train_labels의 길이\n",
         "len(train_labels)"
       ],
       "metadata": {
@@ -84,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zi8bG5VKEBWY",
-        "outputId": "87da2af2-b582-4f22-f1d7-ff51c0cc3c07"
+        "outputId": "e45935b5-63ef-4b0a-c96e-26ff366bd051"
       },
-      "execution_count": 122,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -96,13 +106,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 122
+          "execution_count": 138
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# train_labels 출력\n",
         "train_labels"
       ],
       "metadata": {
@@ -110,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZawpT2AMEC8Q",
-        "outputId": "48bb3a62-0e3f-4248-d4d0-ac4f2fafa235"
+        "outputId": "fb1e737d-c4f9-4595-f2a6-44726fc83ca3"
       },
-      "execution_count": 123,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,14 +133,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 123
+          "execution_count": 139
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**test data**"
+      ],
+      "metadata": {
+        "id": "4rcSGTjVotTB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# test data\n",
+        "# test_images의 차원\n",
         "test_images.shape"
       ],
       "metadata": {
@@ -137,9 +157,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CKzFb5j_EMgo",
-        "outputId": "7616575c-f315-4f01-ea84-58a28c6c6291"
+        "outputId": "764a4123-bce8-4af3-b193-87ac89c6a5d7"
       },
-      "execution_count": 124,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,13 +169,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 124
+          "execution_count": 140
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# test_labels의 길이\n",
         "len(test_labels)"
       ],
       "metadata": {
@@ -163,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QLQsnH3-ERII",
-        "outputId": "87a10994-0d28-4f80-899c-d36441823a1c"
+        "outputId": "db8f6081-f278-4507-f661-ab3ffc16ae9a"
       },
-      "execution_count": 125,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -175,13 +196,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 125
+          "execution_count": 141
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# test_labels 출력\n",
         "test_labels"
       ],
       "metadata": {
@@ -189,9 +211,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SikUSGZ6EUsQ",
-        "outputId": "27d5728c-a371-4b81-df27-4504543e3c63"
+        "outputId": "bba8921b-7bb5-4144-c349-d9aa9d0e6f25"
       },
-      "execution_count": 126,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -201,7 +223,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 126
+          "execution_count": 142
         }
       ]
     },
@@ -219,16 +241,20 @@
       "source": [
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
+        "# from tensorflow.keras.laers import Dense\n",
         "\n",
         "model = keras.Sequential([\n",
         "    layers.Dense(512, activation=\"relu\"),\n",
         "    layers.Dense(10, activation=\"softmax\")\n",
+        "# == tensorflow.keras.layers.Dense(10, activation=\"softmax\")\n",
+        "# == keras.layers.Dense(10, activation=\"softmax\")\n",
+        "# == Dense(10, activation=\"softmax\")\n",
         "])"
       ],
       "metadata": {
         "id": "58Ei7ql4EVog"
       },
-      "execution_count": 127,
+      "execution_count": 143,
       "outputs": []
     },
     {
@@ -236,7 +262,14 @@
       "source": [
         "층(layer)\n",
         "* 데이터를 위한 필터\n",
-        "* 주어진 문제에 더 의미 있는 표현을 입력된 데이터로부터 추출\n",
+        "* 주어진 문제에 더 의미 있는 표현을 입력된 데이터로부터 추출   \n",
+        "\n",
+        "Sequential : 순차적으로 layer 층을 더해줌  \n",
+        "\n",
+        "2개의 Dense층\n",
+        "\n",
+        "* relu : 0보다 작으면 0, 0보다 크면 입력 값 그대로 출력\n",
+        "* softmax : 입력받은 값을 0 ~ 1 사이의 값으로 정규화, 출력 값들의 총합 = 1\n",
         "\n"
       ],
       "metadata": {
@@ -262,16 +295,18 @@
       "metadata": {
         "id": "Ppz9NlunH8kp"
       },
-      "execution_count": 128,
+      "execution_count": 144,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "훈련 준비를 마치기 위해 컴파일 단계에 포함될 세 가지\n",
-        "* 옵티마이저(optimizer) : 성능을 향상시키기 위해 입력된 데이터를 기반으로 모델을 업데이트하는 메커니즘\n",
-        "* 손실 함수(loss function) : 훈련 데이터에서 모델의 성능을 측정하는 방법으로 모델이 옳은 방향으로 학습될 수 있도록 도와줌\n",
-        "* 훈련과 테스트 과정을 모니터링할 지표 "
+        "* 옵티마이저(optimizer) : 성능을 향상시키기 위해 입력된 데이터를 기반으로 모델을 업데이트하는 메커니즘  \n",
+        "rmsprop(Root Mean Sqaure Propagation) : 지수이동평균(Exponential Moving Average)을 활용하여 기울기 업데이트\n",
+        "* 손실 함수(loss function) : 훈련 데이터에서 모델의 성능을 측정하는 방법으로 모델이 옳은 방향으로 학습될 수 있도록 도와줌  \n",
+        "sparse_categorical_crossentropy : one-hot encoding 생략 시\n",
+        "* 훈련과 테스트 과정을 모니터링할 지표"
       ],
       "metadata": {
         "id": "IxXUcnAhH80h"
@@ -290,6 +325,8 @@
       "cell_type": "code",
       "source": [
         "train_images = train_images.reshape((60000, 28 * 28))\n",
+        "# (60000, 28 * 28) == (60000, -1) == (-1, 28 * 28)\n",
+        "# 28 * 28 size 이미지가 60000개\n",
         "train_images = train_images.astype(\"float32\") / 255\n",
         "test_images = test_images.reshape((10000, 28 * 28))\n",
         "test_images = test_images.astype(\"float32\") / 255"
@@ -297,7 +334,7 @@
       "metadata": {
         "id": "9_PCWzUjFabx"
       },
-      "execution_count": 129,
+      "execution_count": 145,
       "outputs": []
     },
     {
@@ -305,8 +342,7 @@
       "source": [
         "데이터를 모델에 맞는 크기로 바꾸고 모든 값을 0과 1 사이로 스케일 조정  \n",
         "[0, 255] 사이의 값인 unit8 타입의 (60000, 28, 28) 크기의 배열  \n",
-        "-> 0과 1 사이의 값을 가지는 float32 타입의 (60000, 28* 28) 크기의 배열\n",
-        "\n"
+        "→ 0과 1 사이의 값을 가지는 float32 타입의 (60000, 28* 28) 크기의 배열"
       ],
       "metadata": {
         "id": "kVRfNCDOKP06"
@@ -331,37 +367,48 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zGU6xWPXKDyR",
-        "outputId": "b06ef999-0c4d-4c98-b8e1-c87bbecb4a38"
+        "outputId": "dc7e3d2d-5b2a-41a4-9414-d808aa880dfb"
       },
-      "execution_count": 130,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "469/469 [==============================] - 7s 11ms/step - loss: 0.2686 - accuracy: 0.9215\n",
+            "469/469 [==============================] - 5s 10ms/step - loss: 0.2650 - accuracy: 0.9236\n",
             "Epoch 2/5\n",
-            "469/469 [==============================] - 5s 10ms/step - loss: 0.1076 - accuracy: 0.9675\n",
+            "469/469 [==============================] - 5s 10ms/step - loss: 0.1064 - accuracy: 0.9686\n",
             "Epoch 3/5\n",
-            "469/469 [==============================] - 6s 12ms/step - loss: 0.0711 - accuracy: 0.9788\n",
+            "469/469 [==============================] - 6s 12ms/step - loss: 0.0707 - accuracy: 0.9788\n",
             "Epoch 4/5\n",
-            "469/469 [==============================] - 5s 10ms/step - loss: 0.0513 - accuracy: 0.9848\n",
+            "469/469 [==============================] - 5s 10ms/step - loss: 0.0507 - accuracy: 0.9849\n",
             "Epoch 5/5\n",
-            "469/469 [==============================] - 5s 10ms/step - loss: 0.0384 - accuracy: 0.9885\n"
+            "469/469 [==============================] - 6s 12ms/step - loss: 0.0388 - accuracy: 0.9887\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f785d418e20>"
+              "<keras.callbacks.History at 0x7f786056f490>"
             ]
           },
           "metadata": {},
-          "execution_count": 130
+          "execution_count": 146
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "케라스에서는 모델의 fit() 메서드를 호출하여 훈련 데이터에 모델을 학습\n",
+        "* epochs : 전체 트레이닝 셋이 신경망을 통화한 횟수\n",
+        "* batch_size : 전체 training dataset을 작은 그룹으로 나누었을 때 하나의 소그룹에 속하는 데이터 수"
+      ],
+      "metadata": {
+        "id": "PqOAQbVbm3wC"
+      }
     },
     {
       "cell_type": "markdown",
@@ -375,7 +422,7 @@
     {
       "cell_type": "code",
       "source": [
-        "test_digits = test_images[0:10]\n",
+        "test_digits = test_images[0:10]  # 10장의 이미지\n",
         "predictions = model.predict(test_digits)\n",
         "predictions[0]"
       ],
@@ -384,28 +431,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e9f2b1b4-1c5e-46b9-8b07-fee0ad7701e3"
+        "outputId": "f13e1024-472c-476f-d73a-df562c93c169"
       },
-      "execution_count": 131,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 89ms/step\n"
+            "1/1 [==============================] - 0s 54ms/step\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([3.8658641e-07, 3.4269146e-08, 2.0618245e-06, 2.4903391e-04,\n",
-              "       6.9504368e-11, 5.8852572e-07, 5.2117733e-12, 9.9973083e-01,\n",
-              "       1.8457416e-06, 1.5235548e-05], dtype=float32)"
+              "array([1.5106618e-08, 2.7941301e-08, 1.8546916e-06, 9.2540977e-05,\n",
+              "       2.9256899e-11, 3.6144183e-08, 2.6461455e-12, 9.9988931e-01,\n",
+              "       5.7069439e-08, 1.6033340e-05], dtype=float32)"
             ]
           },
           "metadata": {},
-          "execution_count": 131
+          "execution_count": 147
         }
       ]
     },
@@ -421,6 +468,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 여러 개의 수 중에서 가장 큰 값의 인덱스\n",
         "predictions[0].argmax()"
       ],
       "metadata": {
@@ -428,9 +476,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0da98993-0114-4427-ce14-a94e225ce951"
+        "outputId": "8841f1a4-6a40-4cfc-9207-8bdce2f09002"
       },
-      "execution_count": 132,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,33 +488,34 @@
             ]
           },
           "metadata": {},
-          "execution_count": 132
+          "execution_count": 148
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "predictions[0][7]"
+        "# 첫번째 이미지의 인덱스 7의 확률\n",
+        "predictions[0][7] "
       ],
       "metadata": {
         "id": "Fe64ZAhYNUb6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "821e9a44-34a1-4af7-8605-35a9a5e28a5a"
+        "outputId": "aa7e1ef1-2a35-45be-8c6d-761305880c02"
       },
-      "execution_count": 133,
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9997308"
+              "0.9998893"
             ]
           },
           "metadata": {},
-          "execution_count": 133
+          "execution_count": 149
         }
       ]
     },
@@ -481,9 +530,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "94834e85-ce11-45c6-e96c-9032d25f862b"
+        "outputId": "c3dba257-d33c-4670-a782-6eeb8343b5c4"
       },
-      "execution_count": 134,
+      "execution_count": 150,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,7 +542,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 134
+          "execution_count": 150
         }
       ]
     },
@@ -517,16 +566,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b4fce23-fc3c-43df-d540-e6167f7f7586"
+        "outputId": "239ffdb8-34cc-4066-dbb8-5f76858c1f7f"
       },
-      "execution_count": 135,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "313/313 [==============================] - 1s 4ms/step - loss: 0.0600 - accuracy: 0.9811\n",
-            "테스트 정확도 : 0.9811000227928162\n"
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.0679 - accuracy: 0.9791\n",
+            "테스트 정확도 : 0.9790999889373779\n"
           ]
         }
       ]
